--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".controller.Activity.ShoppingCartActivity">
+    tools:context=".controller.activity.ShoppingCartActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
