--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".controller.activity.ShoppingCartActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_shopping_cart">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
