--- a/app/src/main/res/layout/fragment_walkthrough_container.xml
+++ b/app/src/main/res/layout/fragment_walkthrough_container.xml
@@ -14,12 +14,23 @@
         <TextView
             android:id="@+id/walkthrough_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="25dp"
+            android:gravity="center_horizontal"
+            android:textSize="20dp"
+            android:textColor="@color/white"/>
 
         <TextView
             android:id="@+id/walkthrough_description"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center_horizontal"
+            android:textSize="14dp"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
